@@ -185,6 +185,101 @@ property_page_validate_fields (PropertyPage *page)
     property_page_set_warning (page);
 }
 
+static void
+message_missing_permissions (GtkWidget *widget, const char *path,
+			     gboolean need_r, gboolean need_w, gboolean need_x)
+{
+  GtkWidget *toplevel;
+  GtkWidget *dialog;
+  char *display_name;
+
+  toplevel = gtk_widget_get_toplevel (widget);
+  if (!GTK_IS_WINDOW (toplevel))
+    toplevel = NULL;
+
+  display_name = g_filename_display_basename (path);
+
+  dialog = gtk_message_dialog_new (toplevel ? GTK_WINDOW (toplevel) : NULL,
+				   0,
+				   GTK_MESSAGE_INFO,
+				   GTK_BUTTONS_OK,
+				   _("The folder \"%s\" has insufficient permissions for sharing"),
+				   display_name);
+  g_free (display_name);
+
+  gtk_message_dialog_format_secondary_text (GTK_MESSAGE_DIALOG (dialog),
+					    _("Nautilus will add the following permissions automatically:\n"
+					      "%s%s%s"),
+					    need_r ? _("  - read permission by others\n") : "",
+					    need_w ? _("  - write permission by others\n") : "",
+					    need_x ? _("  - execute permission by others\n") : "");
+
+  gtk_dialog_run (GTK_DIALOG (dialog));
+  gtk_widget_destroy (dialog);
+}
+
+static void
+error_when_changing_permissions (GtkWidget *widget, const char *path)
+{
+  GtkWidget *toplevel;
+  GtkWidget *dialog;
+  char *display_name;
+
+  toplevel = gtk_widget_get_toplevel (widget);
+  if (!GTK_IS_WINDOW (toplevel))
+    toplevel = NULL;
+
+  display_name = g_filename_display_basename (path);
+
+  dialog = gtk_message_dialog_new (toplevel ? GTK_WINDOW (toplevel) : NULL,
+				   0,
+				   GTK_MESSAGE_ERROR,
+				   GTK_BUTTONS_OK,
+				   _("Could not change the permissions of folder \"%s\""),
+				   display_name);
+  g_free (display_name);
+
+  gtk_dialog_run (GTK_DIALOG (dialog));
+  gtk_widget_destroy (dialog);
+}
+
+static void
+check_sharing_permissions (GtkWidget *widget, const char *path, gboolean is_shared, gboolean is_writable)
+{
+  struct stat st;
+  mode_t mode, new_mode;
+  gboolean need_r;
+  gboolean need_w;
+  gboolean need_x;
+
+  if (!is_shared)
+    return;
+
+  if (stat (path, &st) != 0)
+    return; /* We'll just let "net usershare" give back an error if the file disappears */
+
+  mode = st.st_mode;
+  new_mode = mode;
+
+  need_r = (mode & S_IROTH) == 0;
+  new_mode |= S_IROTH;
+
+  need_w = is_writable && (mode & S_IWOTH) == 0;
+  if (need_w)
+    new_mode |= S_IWOTH;
+
+  need_x = (mode & S_IXOTH) == 0;
+  new_mode |= S_IXOTH;
+
+  if (need_r || need_w || need_x)
+    {
+      message_missing_permissions (widget, path, need_r, need_w, need_x);
+
+      if (!chmod (path, new_mode))
+	error_when_changing_permissions (widget, path);
+    }
+}
+
 static gboolean
 property_page_commit (PropertyPage *page)
 {
@@ -199,6 +294,8 @@ property_page_commit (PropertyPage *page)
   share_info.share_name = (char *) gtk_entry_get_text (GTK_ENTRY (page->entry_share_name));
   share_info.comment = (char *) gtk_entry_get_text (GTK_ENTRY (page->entry_share_comment));
   share_info.is_writable = gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (page->checkbutton_share_rw_ro));
+
+  check_sharing_permissions (page->main, page->path, is_shared, share_info.is_writable);
 
   error = NULL;
   retval = shares_modify_share (share_info.path, is_shared ? &share_info : NULL, &error);
